# categories_ms

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: crud.py  db.py  models.py  routes.py
