[project]
name = "categories-ms"
version = "0.1.0"
description = "Categories microservice for the MeetUN app. Used by events, groups and users"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.13",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
